# Sfml

./: CMakeLists.txt  Coche.cpp  Coche.h  main.cpp
Entrada y Salida/: CMakeLists.txt
HeapStack/: CMakeLists.txt  Persona.cpp  main.cpp
HeapStack - copia/: Persona.h
Juego/: CMakeLists.txt  Configuracion.cpp  Configuracion.h  Duende.cpp  Duende.h  Enemigo.cpp  Enemigo.h  Entidad.cpp  Entidad.h  Guerrero.cpp  Guerrero.h  Inventario.cpp  Inventario.h  Item.cpp  Item.h  Mago.cpp  Mago.h  Orco.cpp  Orco.h  PersonajeVideojuego.cpp  PersonajeVideojuego.h
Polimorfismo/: Animal.cpp  Animal.h  CMakeLists.txt  main.cpp
Proyecto/: BolaDeFuego.cpp  BolaDeFuego.h  CMakeLists.txt  Enemigo.cpp  Enemigo.h  Entidad.cpp  Entidad.h  Guerrero.h  Habilidad.cpp  Habilidad.h  Inventario.cpp  Inventario.h  Item.cpp  Item.h  Jugador.cpp  Jugador.h  Mago.cpp  Personaje.cpp  Personaje.h  main.cpp
Referencias/: CMakeLists.txt  Enemigo.cpp  Enemigo.h  Guerrero.cpp  Guerrero.h  Inventario.cpp  Inventario.h  Mago.cpp  Mago.h  PersonajeVideojuego.cpp  PersonajeVideojuego.h  main.cpp  trabajo.cpp  trabajo.h
